# sem6

./: .gitignore  CMakeLists.txt  README.md
include/: f.h
src/: 2.cpp  3.cpp  4.cpp  5.cpp  main.cpp
workflows/: build.yml
